feat: Updated use case 01 documentation.